Update DOCUMENTATION_TACHE_3.md