@@ -18,8 +18,8 @@ Nous avons rencontré un problème lorsque nous essayons de exécuter un build a
 ### -XX:+UseG1GC
 Ce flag active le garbage collector G1, qui est fait pour réduire les pauses de nettoyage de mémoire dans les grandes applications. Cela rend donc les applications plus rapide et plus fluide, parce que la gestion de la mémoire est plus efficace. En testant avec ce flag, on peut donc voir si l'optimisation de la mémoire améliore effectivement la stabilité et la vitesse de l'application lors des tests.
 
-### -XX:+UseZGC
-Ce flag active le garbage collector ZGC, qui minimise les pauses de collecte de mémoire, entrainant une amélioration de la performance des applications qui ont besoin de réagir rapidement sans interruptions. Ce flag est donc utile pour voir comment le faible temps de pause pourrait affecter les performances globales de l'application.
+### 
+
 
 ### -XX:+UseCompressedOops
 Ce flag active les pointeurs d'objets compressés, ce qui entraîne une réduction de l'utilisation de la mémoire. Il améliore donc les performances pour les applications qui ont un haut niveau de consommation de mémoire et il évite également les erreurs de mémoire insuffisante.
